Fix redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <script>
         // Redirige inmediatamente
-        window.location.href = "https://github.com/mbolmun688/";
+        window.location.href = "https://github.com/mbolmun688";
     </script>
 
 </body>
